<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".visits.AddVisitActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingRight="24dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/building_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_building"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_building"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp" />

            <TextView
                android:id="@+id/start_time_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_start_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <TimePicker
                android:id="@+id/picker_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-20dp"
                android:layout_marginBottom="-20dp"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/end_time_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_end_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <TimePicker
                android:id="@+id/picker_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-20dp"
                android:layout_marginBottom="-20dp"
                android:timePickerMode="spinner" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/select_safety_measures"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switch_sanitizer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/is_hand_sanitizer"
                    android:textColor="#80000000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/is_wearing_masks"
                    android:textColor="#80000000"
                    android:textSize="16sp" />

                <SeekBar
                    android:id="@+id/seekBar_masks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="None"
                        android:textAlignment="center" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Some"
                        android:textAlignment="center" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Most"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="All"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>

            <Switch
                android:id="@+id/switch_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/class_visit"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/course_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/input_course_code"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/class_code"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/input_course_section"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter section id with format 12345"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/class_days_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/select_class_days"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBoxMonday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Monday" />

                <CheckBox
                    android:id="@+id/checkBoxTuesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tuesday" />

                <CheckBox
                    android:id="@+id/checkBoxWednesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Wednesday" />

                <CheckBox
                    android:id="@+id/checkBoxThursday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Thursday" />

                <CheckBox
                    android:id="@+id/checkBoxFriday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Friday" />
            </LinearLayout>

            <Button
                android:id="@+id/button_add_visit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginTop="5dp"
                android:text="@string/add_visit" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>